--- a/app/src/main/res/layout/fragment_stocktake.xml
+++ b/app/src/main/res/layout/fragment_stocktake.xml
@@ -7,14 +7,12 @@
     android:background="@color/white"
     android:focusableInTouchMode="true">
 
-
     <RelativeLayout
         android:id="@+id/rl_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:visibility="visible">
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,7 +28,7 @@
                 android:layout_height="0dp"
                 android:layout_below="@+id/txt_type"
                 android:layout_marginTop="5dp"
-                android:layout_weight="0.89"></com.inventrax.athome.searchableSpinner.SearchableSpinner>
+                android:layout_weight="0.89"/>
 
 
             <LinearLayout
@@ -40,7 +38,7 @@
                 android:layout_weight="1.5"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:weightSum="2">
+                android:weightSum="3">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -76,6 +74,46 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginBottom="5dp"
                         android:text="@string/scanLocation"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        android:textStyle="normal" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/cvScanPallet"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_below="@+id/tvScanLocation"
+                        android:layout_centerHorizontal="true"
+                        app:cardBackgroundColor="@color/palletColor"
+                        app:cardCornerRadius="20dp"
+                        app:cardElevation="0dp">
+
+                        <ImageView
+                            android:id="@+id/ivScanPallet"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_gravity="center"
+                            android:background="@drawable/fullscreen_img" />
+
+                    </android.support.v7.widget.CardView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/cvScan"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="5dp"
+                        android:text="@string/scanPallet"
                         android:textColor="@color/black"
                         android:textSize="12sp"
                         android:textStyle="normal" />
@@ -153,6 +191,7 @@
                         android:inputType="text"
                         android:singleLine="true"
                         android:textSize="12dp" />
+
                 </android.support.design.widget.TextInputLayout>
 
 
@@ -186,7 +225,6 @@
                 android:orientation="horizontal"
                 android:weightSum="2.0">
 
-
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -204,11 +242,25 @@
                         android:textSize="12dp" />
                 </android.support.design.widget.TextInputLayout>
 
-
-                <View
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/etPallet"
+                        style="@style/editTextStyleSmall"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:enabled="false"
+                        android:hint="@string/pallet"
+                        android:inputType="text"
+                        android:singleLine="true"
+                        android:textSize="12dp" />
+
+
+                </android.support.design.widget.TextInputLayout>
+
             </LinearLayout>
 
             <LinearLayout
