--- a/app/src/main/res/layout/ecom_marketpalce_fragment.xml
+++ b/app/src/main/res/layout/ecom_marketpalce_fragment.xml
@@ -87,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="@string/vlpd_number">
+                android:text="@string/group_vlpd_number">
             </TextView>
 
             <com.inventrax.athome.util.CustomEditText
@@ -192,6 +192,22 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <CheckBox
+                    android:id="@+id/cbPepperFryInvoice"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="5) PepperFry Invoice" />
+
+
+            </LinearLayout>
+
             <android.support.v7.widget.CardView
                 android:id="@+id/cvScanRSN"
                 android:layout_width="45dp"
@@ -208,6 +224,7 @@
                     android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:background="@drawable/fullscreen_img" />
+
             </android.support.v7.widget.CardView>
 
             <TextView
@@ -274,6 +291,20 @@
 
             <TextView
                 android:id="@+id/tvStatusFour"
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
+                android:gravity="center_vertical"
+                android:layout_marginTop="5dp"
+                android:background="@color/statusColor"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                android:textStyle="bold"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="5dp"
+                />
+
+            <TextView
+                android:id="@+id/tvStatusFive"
                 android:layout_width="match_parent"
                 android:layout_height="37dp"
                 android:gravity="center_vertical"
